# xrepotui

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: install-linux.md  install-macos.md  install-windows.md
src/: main.rs
src/app/: mod.rs
src/config/: mod.rs
src/github/: client.rs  mod.rs  models.rs
src/navigation/: mod.rs
src/ui/: mod.rs
