[package]
name = "xrepotui"
version = "0.1.0"
edition = "2021"
description = "xrepotui - Multi-repository TUI dashboard and interface for Git and GitHub"
license = "MIT"
repository = "https://github.com/keathmilligan/xrepotui"
keywords = ["cli", "github", "tui", "git", "dashboard"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "xrepotui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ansi-to-tui = "8"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
octocrab = "0.49"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }

[profile.release]
lto = true
strip = true
